recursion.cons.lessons.recursion.cons.ButNlast.scala.error
butNlast:4: error: not found: value butLast
  } else return butNlast(butLast(l),n-1)
                         ^