recursion.cons.lessons.recursion.cons.ButNlast.scala.code
def butNlast(l:List[Int], n:Int): List[Int] = {
  if (l==Nil || n==0) {
    return l
  } else return butNlast(butLast(l),n-1)
}